Fix scrollbar

--- a/BlazorBierTekno/BlazorBierTekno.Client/Styles/main.less
+++ b/BlazorBierTekno/BlazorBierTekno.Client/Styles/main.less
@@ -1,5 +1,9 @@
 ﻿@import '../Styles/variables.less';
 
+body{
+    overflow: hidden;
+}
+
 .presentation-page {
     width: 82%;
     height: 100%;
@@ -71,7 +75,7 @@
         }
 
         pre {
-            font-size: 32px;
+            font-size: 30px;
         }
     }
 }
